client: Fixed scaling & positioning of page background on small devices

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -5,16 +5,10 @@ body {
     padding-top: 70px;
 }
 
-.background {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    height: 30%;
-    width: 100%;
-
-    background: #ffffff url("../../img/background.svg") no-repeat top left;
-    background-size: 100%;
+body {
+    background: url("../../img/background.svg") no-repeat top left;
+    background-position-y: 70vh;
+    background-size: cover;
 }
 
 
